minikube/network-policies.yaml
---
# Block all ingress traffic by default
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
 name: default-deny-ingress
 namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---

# Allow pod-to-pod in same namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: namespace-internal-ingress-allow
  namespace: kube-system
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: kube-system
---

# Allow ingress traffic to coredns
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: coredns-ingress-allow
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: coredns
  ingress:
  # Allow access from any namespace and pod inside Kubernetes, not outside
  - from:
    - namespaceSelector: {}
    - podSelector: {}
    ports:
    - protocol: UDP
      port: 53
